log/build_2025-01-06_09-53-42/navigation/stdout_stderr.log
running develop
Removing /home/ubuntu/CS_ws/install/navigation/lib/python3.10/site-packages/navigation.egg-link (link to .)
running egg_info
writing ../../build/navigation/navigation.egg-info/PKG-INFO
writing dependency_links to ../../build/navigation/navigation.egg-info/dependency_links.txt
writing entry points to ../../build/navigation/navigation.egg-info/entry_points.txt
writing requirements to ../../build/navigation/navigation.egg-info/requires.txt
writing top-level names to ../../build/navigation/navigation.egg-info/top_level.txt
reading manifest file '../../build/navigation/navigation.egg-info/SOURCES.txt'
writing manifest file '../../build/navigation/navigation.egg-info/SOURCES.txt'
running build
running build_py
copying navigation/navigation_node.py -> /home/ubuntu/CS_ws/build/navigation/build/lib/navigation
running install
running install_lib
creating /home/ubuntu/CS_ws/install/navigation/lib/python3.10/site-packages/navigation
copying /home/ubuntu/CS_ws/build/navigation/build/lib/navigation/__init__.py -> /home/ubuntu/CS_ws/install/navigation/lib/python3.10/site-packages/navigation
copying /home/ubuntu/CS_ws/build/navigation/build/lib/navigation/navigation_node.py -> /home/ubuntu/CS_ws/install/navigation/lib/python3.10/site-packages/navigation
byte-compiling /home/ubuntu/CS_ws/install/navigation/lib/python3.10/site-packages/navigation/__init__.py to __init__.cpython-310.pyc
byte-compiling /home/ubuntu/CS_ws/install/navigation/lib/python3.10/site-packages/navigation/navigation_node.py to navigation_node.cpython-310.pyc
  File "/home/ubuntu/CS_ws/install/navigation/lib/python3.10/site-packages/navigation/navigation_node.py", line 27
    success = await asyncio.get_event_loop().run_in_executor(self.executor, self.navigate_to_goal, x, y, yaw)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: 'await' outside async function

running install_data
copying resource/navigation -> /home/ubuntu/CS_ws/install/navigation/share/ament_index/resource_index/packages
copying package.xml -> /home/ubuntu/CS_ws/install/navigation/share/navigation
running install_egg_info
Copying ../../build/navigation/navigation.egg-info to /home/ubuntu/CS_ws/install/navigation/lib/python3.10/site-packages/navigation-0.0.0-py3.10.egg-info
running install_scripts
Installing navigation_node script to /home/ubuntu/CS_ws/install/navigation/lib/navigation
writing list of installed files to '/home/ubuntu/CS_ws/build/navigation/install.log'
